Alterações nas tabelas

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,6 +16,7 @@
     <main>
         <div >
             <div>
+                <h2>Tabela geral de contatos</h2>
                 <table>
                     <thead>
                         <tr>
@@ -39,6 +40,7 @@
                 <button id="btn" onclick="find_contact(event)">Submit</button>
             </form>
             <div>
+                <h2>Tabela de pesquisa de contato</h2>
                 <table>
                     <thead>
                         <tr>
